--- a/desarrollo_social/views/tipo_beca.xml
+++ b/desarrollo_social/views/tipo_beca.xml
@@ -21,9 +21,25 @@
 			<field name="arch" type="xml"> 
 				<form string="Formulario de Tipo de Becas">
 					<group colspan="2">
+						<field name="cod_t_beca" nolabel="0" colspan="1"/>
 						<field name="tipo_beca" nolabel="0" colspan="1"/>
+						<field name="asignacion" nolabel="0" colspan="1"/>
+						<field name="descripcion" nolabel="0" colspan="1"/>
 					</group>
 				</form>
+			</field>
+		</record>
+		
+		<record model="ir.ui.view" id="vista_tipoBeca_tree">
+			<field name="name">tipobeca.tree</field>
+			<field name="model">becados.tipobeca</field>
+			<field name="arch" type="xml">
+				<tree string="Lista de Tipo de Becas">
+					<field name="cod_t_beca"/>
+					<field name="tipo_beca"/>
+					<field name="asignacion"/>
+					<field name="descripcion"/>
+				</tree>
 			</field>
 		</record>
 		
