--- a/recursos_humanos/views/empleado.xml
+++ b/recursos_humanos/views/empleado.xml
@@ -16,11 +16,7 @@
 			<field name="inherit_id" ref="desarrollo_social.vista_becados"/>
 			<field name="arch" type="xml">
 
-				<field name="centro_votacion" position="after">
-					<div class="oe_horizontal_separator" style="width:250%%">
-						Espacio Geográfico
-					</div>
-					<newline/>
+				<field name="direccion" position="before">
 					<field name="estado" domain= "[('country_id','=',country_id)]"/>
 				</field>
 				<field name="estado" position="after">
@@ -60,10 +56,11 @@
 					<field name="tipo_beca" attrs="{'invisible': [('categoria', '!=', '1') ] }"/>
 				</xpath>
 
-				<!-- <xpath expr="//field[@name='area']" position="replace">
+				<xpath expr="//field[@name='place_of_birth']" position="replace">
 
-					<field name="area" attrs="{'invisible': [('categoria', '!=', '1') ] }"/>
-				</xpath> -->
+					<field name="place_of_birth" invisible="1"/>
+				</xpath>
+				
 
 				<xpath expr="//field[@name='name']" position="replace">
 
@@ -75,7 +72,7 @@
 								<font style="color:white;">|</font>
 							</td>
 							<td>
-								<button name="get_employee_filter" string="Actualizar servicio:" type="object" icon="gtk-apply"/>
+								<button name="get_employee_filter" string="Actualizar servicio" type="object" attrs="{'invisible': [('categoria', '!=', '2') ] }" icon="gtk-apply"/>
 							</td>
 						</tr>
 					</table>
@@ -122,25 +119,9 @@
 					<field name="tiempo_servicio" class="fecha" readonly="0"/>
 				</xpath>
 
-				<!-- <xpath expr="//field[@name='carga_familiar']" position="after">
-					<newline/>
-					<group>
-					<div style="margin-left: 550px;margin-top:20px;width:300px;">
-					<table border="1">
-						<tr>
-							<td>
-								<button name="get_employee_filter" string="Actualizar año de servicio:" type="object" icon="gtk-apply"/>
-							</td>
-						</tr>
-					</table>
-					</div>
-				</group>
+				<xpath expr="//field[@name='birthday']" position="replace">
 
-				</xpath> -->
-
-				<xpath expr="//group/group/field[@name='birthday']" position="replace">
-
-					<field name="birthday" on_change="validar_fecha_nac_employee(birthday)"/>
+					<field name="fecha_nacimiento" on_change="data_employee(fecha_nacimiento,'1')"/>
 				</xpath>
 
 				<xpath expr="//group/group/field[@name='edad']" position="replace">
@@ -158,10 +139,94 @@
 					<field name="desc_status"/>
 
 				</xpath>
-
 				
-				
+				<xpath expr="//field[@name='job_id']" position="replace">
 
+					<field name="job_id" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
+				</xpath>
+
+				<xpath expr="//field[@name='desc_status']" position="replace">
+
+					<field name="desc_status" attrs="{'invisible': [('categoria', '!=', '1') ] }"/>
+				</xpath>
+
+				<!-- GRUPO DE BOTONES DE ACCIÓN -->
+				<xpath expr="//div[@name='button_box']" position="replace">
+					<div class="oe_right oe_button_box" name="button_box" invisible="1">
+					</div>
+				</xpath>
+
+				<xpath expr="//field[@name='department_id']" position="replace">
+
+					<field name="department_id" on_change="search_department(department_id)"/>
+				</xpath>
+				<xpath expr="//field[@name='empleado']" position="before">
+
+					<field name="gerente" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
+				</xpath>
+
+				<xpath expr="//group/group[@string='Active']" position="replace">
+					<group string="Active" name="active_group" invisible="1">
+						<field name="active"/>
+					</group>
+				</xpath>
+
+				<xpath expr="//field[@name='cedula']" position="replace">
+					<field name="cedula" on_change="data_employee(cedula,'2')"/>
+
+				</xpath>
+
+				<xpath expr="//group/group/field[@name='bank_account_id']" position="replace">
+					<field name="bank_account_id" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
+				</xpath>
+			</field>
+		</record>
+
+		<!-- Proceso de busqueda para la clasificación del personal (Administrativo / Directivo / Obrero)-->
+
+		<record id="search_filter_class_personal" model="ir.ui.view">
+			<field name="name">Clasificación del personal</field>
+			<field name="model">hr.employee</field>
+			<field name="inherit_id" ref="hr.view_employee_filter"/>
+			<field name="arch" type="xml">
+				<field name="name" position="after">
+					<field name="status"/>
+					<field name="class_personal"/>
+					<field name="job_id"/>
+				</field>
+			</field>
+		</record>
+
+		<!-- Proceso de validación para agrupar por diferentes filtros... -->
+
+		<record id="search_filter_job_class_personal" model="ir.ui.view">
+			<field name="name">Agrupar por Clasificación del Personal</field>
+			<field name="model">hr.employee</field>
+			<field name="inherit_id" ref="hr.view_employee_filter"/>
+			<field name="arch" type="xml">
+				<xpath expr="//group/filter[@string='Manager']" position="after">
+
+					<filter string="Clasificación del personal" icon="terp-personal" domain="[]" context="{'group_by':'class_personal'}"/>
+
+					<filter string="Estátus del Empleado" icon="terp-personal" domain="[]" context="{'group_by':'status'}"/>
+				</xpath>
+
+				<xpath expr="//group/filter[@string='Manager']" position="replace">
+
+					<filter string="Manager" icon="terp-personal" domain="[]" context="{'group_by':'parent_id'}" invisible="1"/>
+				</xpath>
+				<xpath expr="//group/filter[@string='Coach']" position="replace">
+
+					<filter string="Coach" icon="terp-personal" domain="[]" context="{'group_by':'coach_id'}" invisible="1"/>
+				</xpath>
+				<xpath expr="//group/filter[@string='Job']" position="replace">
+
+					<filter string="Cargo" icon="terp-gtk-select-all" domain="[]" context="{'group_by':'job_id'}"/>
+				</xpath>
+				<xpath expr="//group/filter[@string='Company']" position="replace">
+
+					<filter string="Company" icon="terp-go-home" domain="[]" context="{'group_by':'company_id'}" groups="base.group_multi_company" invisible="1"/>
+				</xpath>
 			</field>
 		</record>
 
@@ -175,6 +240,9 @@
 				</field>
 				<field name="parent_id" position="after">
 					<field name="status"/>
+				</field>
+				<field name="job_id" position="after">
+					<field name="class_personal"/>
 				</field>
 			</field>
 		</record>
